--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "npx prettier -w styles pages components"
+    "format": "npx prettier -w styles pages components store"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "ethers": "^5.6.1",
+    "ipfs-http-client": "^56.0.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
